# calculatorDemo

./: CMakeLists.txt  complete.cpp  main.cpp  updata.txt
include/: calculate.hpp  tool.hpp
src/: calculate.cpp  main.cpp  tool.cpp
